--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,21 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header [title]="title"></app-header>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">HOME</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong class="capitalize">HOME</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="auto">
+          <ion-item fill="outline">
+            <ion-input type="text" placeholder="Enter a message."></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-button (click)="onClick()">
+            <ion-icon slot="end" name="paper-plane"></ion-icon>
+            SEND
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+
 </ion-content>
