--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,28 +1,13 @@
-ion-menu-button {
-  color: var(--ion-color-primary);
-}
+// div.container{
+//   text-align: center;
+//   margin: 10px auto;
+//   border: 1px solid red;
+// }
 
 #container {
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
+  margin: 10px auto;
+  width: 50%;
   top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  border: 1px solid red;
 }
