--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -10,3 +10,20 @@
   width: 80%;
   top: 50%;
 }
+
+.box{
+  border: 2px solid silver;
+  border-radius: 8px;
+  margin: 3px 0;
+}
+
+ion-col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  background-color: #135d54;
+  border: solid 1px #fff;
+  color: #fff;
+}
