added year values to 'ion-date-time' component

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -81,6 +81,7 @@
           [value]="date"
           [min]="date"
           style="margin: 3px auto;"
+          [yearValues]="getYears(date)"
         ></ion-datetime>
       </div>
     </ion-grid>
