--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -10,3 +10,11 @@
   overflow: hidden;
   text-align: center;
 }
+
+.chat-list-header{
+  text-align: center;
+}
+
+ion-icon.ready-icon{
+  font-size: 10em
+}
