+added: instant messaging components +added: scheduled messaging components +changed: server socket events from individual to inside object + added: skeleton text on client loading

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -16,5 +16,10 @@
 }
 
 ion-icon.ready-icon{
-  font-size: 10em
+  font-size: 128px
+}
+
+ion-chip {
+  --background: #ff0000de;
+  --color: #ffffff;
 }
