--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,21 +12,28 @@
     </div>
   </div>
 
-  <div class="centered" *ngIf="isClientReady">
-    <ion-icon class="ready-icon" name="checkmark-circle-outline" color="success" size="large"></ion-icon>
-    <p>Client Ready! Retrieving chats...</p>
+  <div *ngIf="isClientReady && clientChats.length < 1">
+    <div class="centered">
+      <ion-icon class="ready-icon" name="checkmark-circle-outline" color="success"></ion-icon>
+      <p>Client Ready! Retrieving chats...</p>
+    </div>
+    <ion-list lines="none">
+      <ion-item *ngFor="let i of [1,2,3,4,5,6,7,8,9,0]">
+          <ion-skeleton-text animated style="width: 100%; height: 2em"></ion-skeleton-text>
+      </ion-item>
+    </ion-list>
   </div>
 
   <ion-list *ngIf="clientChats.length > 0">
-    <ion-list-header class="chat-list-header">
+    <ion-list-header style="text-align: center;">
       <h2>Your Chats</h2>
     </ion-list-header>
     <ion-item *ngFor="let chat of clientChats; index as i" [color]="chat.isGroup ? 'secondary' : 'light' ">
      <ion-label>
-      <ion-chip color="primary">
-        <ion-label>{{i}}</ion-label>
-      </ion-chip>
       {{chat.name}}
+      <ion-chip  *ngIf="chat.unreadCount > 0" class="ion-align-self-end">
+        <ion-label>{{chat.unreadCount}}</ion-label>
+      </ion-chip>
     </ion-label>
     </ion-item>
   </ion-list>
