--- a/src/app/pages/schedule/new/new.page.scss
+++ b/src/app/pages/schedule/new/new.page.scss
@@ -42,3 +42,20 @@ ion-item.date-item {
   --transition: none;
   --background-focused: #ffffff00;
 }
+
+.chat-list{
+  border: 1px solid rgb(196, 196, 196);
+  border-radius: 4px;
+  margin-top: 1em;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 20em;
+  overflow: hidden;
+  position: relative;
+  ion-searchbar{
+    width: 100%;
+    position: fixed;
+  }
+}
