--- a/src/app/pages/schedule/schedule.page.scss
+++ b/src/app/pages/schedule/schedule.page.scss
@@ -13,3 +13,79 @@ div.no-schedule{
   }
   margin: 4em auto;
 }
+
+div.flex{
+  margin:2em 0 2em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 100%;
+  align-items: center;
+  border-bottom: 1px solid rgb(223, 223, 223);
+  justify-content: space-around;
+  padding: 0 1em;
+
+  div.flex-title{
+    padding-right: 2em;
+    flex: 2;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 600;
+  };
+
+  div.flex-filter{
+    flex: auto;
+    width: auto;
+  }
+}
+
+ion-accordion.accordion{
+  border-radius: 8px;
+}
+
+div.accordion-content{
+  margin: 0.2em;
+  padding: 1em;
+  background: linear-gradient(127deg, #ffffff, #e7e7e7) ;
+  border-radius: 8px;
+  border: 0.05em solid rgb(184, 184, 184);
+  // box-shadow: 3px 6px black;
+
+  p.bold{
+    font-weight: 600;
+    text-decoration: underline;
+  }
+}
+
+div.selected-chats-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid rgb(142, 142, 142);
+
+  div.selected-chat{
+    margin: 0.5em;
+    padding: 1em;
+    border-radius: 8px;
+    background-color: rgb(117, 117, 117);
+    color: rgb(255, 255, 255);
+    width: auto;
+  }
+}
+
+div.textarea-container{
+  border: 1px solid rgb(142, 142, 142);
+  border-radius: 4px;
+  padding: 0.5em;
+
+  p.message{
+    color: rgba(0, 0, 0, 0.651);
+    font-style: italic;
+  }
+}
+
+ion-chip{
+  text-transform: capitalize;
+}
