--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,10 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-toast.custom-toast{
+  text-align: center;
+  font-size: 1.1rem;
+  margin-top: 3rem;
+  --border-radius: 8px;
+}
