--- a/src/app/pages/schedule/new/new.page.html
+++ b/src/app/pages/schedule/new/new.page.html
@@ -40,33 +40,17 @@
           </ion-item-divider>
 
           <div class="container">
-            <ion-list lines="none">
-              <ion-radio-group formControlName="isInstant">
-                <ion-grid fixed>
-                  <ion-row>
-                    <ion-col size="12">
-                      <ion-item>
-                        <ion-label>Instant</ion-label>
-                        <ion-radio slot="end" [value]="true"></ion-radio>
-                      </ion-item>
-                    </ion-col>
-                    <ion-col size="12">
-                      <ion-item>
-                        <ion-label>Scheduled</ion-label>
-                        <ion-radio slot="end" [value]="false"></ion-radio>
-                      </ion-item>
-                    </ion-col>
-                  </ion-row>
-                </ion-grid>
-              </ion-radio-group>
-            </ion-list>
+            <ion-item lines="none">
+              <ion-label>Send instantly</ion-label>
+              <ion-toggle color="primary" formControlName="isInstant"></ion-toggle>
+            </ion-item>
           </div>
           <div [hidden]="messageForm.value.isInstant === true">
             <ion-item-divider>
               <ion-label>Date</ion-label>
             </ion-item-divider>
             <div class="container">
-              <ion-item class="date-item">
+              <ion-item lines="none" class="date-item">
                 <ion-datetime-button datetime="datetime"></ion-datetime-button>
                 <ion-modal [keepContentsMounted]="true">
                   <ng-template>
