--- a/src/app/pages/schedule/schedule.page.scss
+++ b/src/app/pages/schedule/schedule.page.scss
@@ -22,7 +22,7 @@ div.flex{
   max-width: 100%;
   align-items: center;
   border-bottom: 1px solid rgb(223, 223, 223);
-  justify-content: space-around;
+  justify-content: start;
   padding: 0 1em;
 
   div.flex-title{
@@ -34,26 +34,27 @@ div.flex{
   };
 
   div.flex-filter{
-    flex: auto;
     width: auto;
   }
 }
 
 ion-accordion.accordion{
   border-radius: 8px;
+  border-top: 0.5px solid rgb(109, 109, 109);
+  border-right: 0.5px solid rgb(109, 109, 109);
+  border-left: 0.5px solid rgb(109, 109, 109);
 }
 
 div.accordion-content{
-  margin: 0.2em;
   padding: 1em;
-  background: linear-gradient(127deg, #ffffff, #e7e7e7) ;
-  border-radius: 8px;
-  border: 0.05em solid rgb(184, 184, 184);
+  border-radius: 0 0 8px 8px;
+  margin-bottom: 0.2em;
   // box-shadow: 3px 6px black;
 
-  p.bold{
-    font-weight: 600;
-    text-decoration: underline;
+  p.header{
+    font-weight: 300;
+    font-style: italic;
+    padding-left: 0.2em;
   }
 }
 
@@ -66,7 +67,7 @@ div.selected-chats-container{
   border: 1px solid rgb(142, 142, 142);
 
   div.selected-chat{
-    margin: 0.5em;
+    margin: 0.3em;
     padding: 0.5em;
     border-radius: 8px;
     background-color: rgb(117, 117, 117);
@@ -78,14 +79,21 @@ div.selected-chats-container{
 div.textarea-container{
   border: 1px solid rgb(142, 142, 142);
   border-radius: 4px;
-  padding: 0.5em;
+  padding: 0.3em;
 
   p.message{
-    color: rgba(0, 0, 0, 0.651);
+    color: rgba(0, 0, 0, 0.65);
     font-style: italic;
   }
 }
 
 ion-chip{
   text-transform: capitalize;
+}
+
+div.divider{
+  height: 0.025em;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top: -0.5rem;
+  margin-bottom: 0.5rem;
 }
