--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -23,3 +23,60 @@ ion-chip {
   --background: #ff0000de;
   --color: #ffffff;
 }
+
+.bg-transparent {
+  background: transparent;
+}
+
+// ion-item {
+//   --background: #3880ff;
+//   --background-activated: #3880ff;
+//   --background-activated-opacity: 1;
+//   --background-focused: #3880ff;
+//   --background-focused-opacity: 1;
+//   --background-hover: #3880ff;
+//   --background-hover-opacity: 1;
+//   --border-color: #3880ff;
+//   --border-radius: 8px;
+//   --border-style: solid;
+//   --border-width: 8px;
+//   --color: #ffffff;
+//   --color-activated: #3880ff;
+//   --color-focused: #3880ff;
+//   --color-hover: #3880ff;
+//   --detail-icon-color: #989aa2;
+//   --detail-icon-font-size: 16px;
+//   --detail-icon-opacity: 1;
+//   --highlight-color-focused: #0cd1e8;
+//   --highlight-color-invalid: #f04141;
+//   --highlight-color-valid: #10dc60;
+//   --highlight-height: 32px;
+//   --inner-border-width: 8px;
+//   --inner-box-shadow: 4px 4px;
+//   --inner-padding-bottom: 4px;
+//   --inner-padding-end: 4px;
+//   --inner-padding-start: 4px;
+//   --inner-padding-top: 4px;
+//   --min-height: 24px;
+//   --padding-bottom: 4px;
+//   --padding-end: 4px;
+//   --padding-start: 4px;
+//   --padding-top: 4px;
+//   --ripple-color: #1e1e1e;
+//   --transition: background-color 15ms linear;
+// }
+
+ion-item.chat{
+  --padding-bottom: 1px;
+  --padding-start: 12px;
+  --padding-top: -3px;
+  --inner-padding-bottom: 0;
+  --inner-padding-top: 0;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.11);
+}
+
+div.list-container{
+  padding-top: 1em;
+  border: 1.5px solid #c1c1c1;
+  border-radius: 8px;
+}
