--- a/src/app/pages/schedule/schedule.page.scss
+++ b/src/app/pages/schedule/schedule.page.scss
@@ -22,7 +22,7 @@ div.flex{
   max-width: 100%;
   align-items: center;
   border-bottom: 1px solid rgb(223, 223, 223);
-  justify-content: start;
+  justify-content: flex-start;
   padding: 0 1em;
 
   div.flex-title{
@@ -39,7 +39,7 @@ div.flex{
 }
 
 ion-accordion.accordion{
-  border-radius: 8px;
+  // border-radius: 0;
   border-top: 0.2px solid rgba(109, 109, 109, 0.559);
   border-right: 0.2px solid rgba(109, 109, 109, 0.559);
   border-left: 0.2px solid rgba(109, 109, 109, 0.559);
